Complete the functionality for deleting/decreasing habit data points
